k8s/hosped-pagamento/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hosped-pagamento-service
  namespace: default
spec:
  selector:
    app: hosped-pagamento
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
