k8s/hosped-pagamento/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hosped-pagamento-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: pagamento.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hosped-pagamento-service
                port:
                  number: 8083
